made changes to the behavior of shop now button anchors

--- a/additional/HomePage.html
+++ b/additional/HomePage.html
@@ -91,7 +91,7 @@
 						<button id="next" onclick="next()" class="button">></button>
 						<button id="previous" onclick="previous()" class="button"><</button>
 						<button class="button btnShopNow" onclick="navigate(this)">
-							<a target="_blank" href="../product-order/order.html">Shop Now >></a> 
+							<a target="self" href="../product-order/order.html">Shop Now >></a> 
 						</button>
 					</img>
 				</div>
@@ -100,7 +100,7 @@
 						<button id="next" onclick="next()" class="button">></button>
 						<button id="previous" onclick="previous()" class="button"><</button>
 						<button class="button btnShopNow" onclick="navigate(this)">
-							<a target="_blank" href="../product-order/order.html">Shop Now >></a>
+							<a target="self" href="../product-order/order.html">Shop Now >></a>
 						</button>
 					</img>
 				</div>
@@ -109,7 +109,7 @@
 						<button id="next" onclick="next()" class="button">></button>
 						<button id="previous" onclick="previous()" class="button"><</button>
 						<button class="button btnShopNow" onclick="navigate(this)">
-							<a target="_blank" href="../product-order/order.html">Shop Now >></a>
+							<a target="self" href="../product-order/order.html">Shop Now >></a>
 						</button>
 					</img>
 				</div>
