updates to the navbar

--- a/Main.html
+++ b/Main.html
@@ -9,9 +9,9 @@
 		<body>
 			<div class="top">
 				<a class="active" href="Main.html" style="margin-left: 400px;">Home</a>
-				<a href="#news">News</a>
-			    <a href="#contact">Contact</a>
-			    <a href="#about">About</a>
+				<a href="../product-order/order.html">Shop</a>
+			    <a href="#">Quiz</a>
+			    <a href="#">Portfolio</a>
 				<a href="Form.html">Feedback</a>
 				<button class="submit">Go</button>
 				<input type="text" placeholder="Search.." name="search">
