updated directory structure

--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 		<head>
 			<title>Main Page</title>
 			<link href="https://fonts.googleapis.com/css?family=Iceland" rel="stylesheet">
-			<link rel="stylesheet" type="text/css" href="css/MainStyles.css">
+			<link rel="stylesheet" type="text/css" href="css/homepage-styles.css">
 			
 		</head>
 		<body>
@@ -12,13 +12,13 @@
 				<a href="../product-order/order.html">Shop</a>
 			    <a href="#">Quiz</a>
 			    <a href="#">Portfolio</a>
-				<a href="Form.html">Feedback</a>
+				<a href="feedback-form.html">Feedback</a>
 				<button class="submit">Go</button>
 				<input type="text" placeholder="Search.." name="search">
 			</div>
 
 			<div class="carousel">
-				<iframe id="change" src="additional/HomePage.html" scrolling="no">
+				<iframe id="change" src="homepage-carousel.html" scrolling="no">
 				</iframe>
 			</div>
 
