--- a/feedback-form.html
+++ b/feedback-form.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 	<html>
 		<head> 
-		<link rel="stylesheet" type="text/css" href="css/FormStyles.css">
+		<link rel="stylesheet" type="text/css" href="css/feedback-form-styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Iceland" rel="stylesheet">
-			<title>Feedback Form </title>
+			<title>Feedback Form</title>
 		</head>
 		<body> 
 			<div class="top">
