--- a/homepage-carousel.html
+++ b/homepage-carousel.html
@@ -87,7 +87,7 @@
 		<body>
 			<div class="shopnow">
 				<div class="images">
-					<img src="Image1.jpg">
+					<img src="resources/graphics/carousel-img1.jpg">
 						<button id="next" onclick="next()" class="button">></button>
 						<button id="previous" onclick="previous()" class="button"><</button>
 						<button class="button btnShopNow" onclick="navigate(this)">
@@ -96,7 +96,7 @@
 					</img>
 				</div>
 				<div class="images">
-					<img src="Image2.jpg">
+					<img src="resources/graphics/carousel-img2.jpg">
 						<button id="next" onclick="next()" class="button">></button>
 						<button id="previous" onclick="previous()" class="button"><</button>
 						<button class="button btnShopNow" onclick="navigate(this)">
@@ -105,7 +105,7 @@
 					</img>
 				</div>
 				<div class="images">
-					<img src="Image3.jpg">
+					<img src="resources/graphics/carousel-img3.jpg">
 						<button id="next" onclick="next()" class="button">></button>
 						<button id="previous" onclick="previous()" class="button"><</button>
 						<button class="button btnShopNow" onclick="navigate(this)">
