renamed main.html to homepage.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             document.onreadystatechange = function () {
                 setTimeout(function () {
                     console.log("Function called");
-                    window.location.href = 'main.html';
+                    window.location.href = 'homepage.html';
                 }, 4000);
             };
 
