added functionality to resize font using slider

--- a/feedback-form.html
+++ b/feedback-form.html
@@ -7,11 +7,11 @@
 		</head>
 		<body> 
 			<div class="top">
-				<a href="Main.html">Home</a>
+				<a href="homepage.html">Home</a>
 				<a href="#news">News</a>
 			    <a href="#contact">Contact</a>
 			    <a href="#about">About</a>
-				<a class="active" href="Form.html">Feedback</a>
+				<a class="active" href="feedback-form.html">Feedback</a>
 			</div>	
 			<h3>Comments Form</h3>
 			<div>
