--- a/product-order/order.html
+++ b/product-order/order.html
@@ -8,9 +8,20 @@
     <title>Product Order</title>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto|OpenSans"/>
+    <link href="https://fonts.googleapis.com/css?family=Iceland" rel="stylesheet">
     <link rel="stylesheet" href="order.css">
 </head>
 <body style="background-color: white;">
+    <div id="font-size-slider-div">
+            <input id="font-size-slider" onchange="resizeFont()" type="range" min="1" max="5" value="3"/>
+    </div>
+    <div class="top">
+            <a href="../homepage.html">Home</a>
+            <a class="active" href="#">Shop</a>
+            <a href="#">Quiz</a>
+            <a href="#">Portfolio</a>
+            <a href="../feedback-form.html">Feedback</a>
+    </div>
     <form action="javascript:" method="post" onsubmit="processOrder();">
 
         <fieldset class="form-fieldset">
@@ -132,6 +143,21 @@
     </footer>
 
     <script src="order.js" type="text/javascript"></script>
+    <script>
+            let scaleValue = parseInt(document.getElementById("font-size-slider").value);
 
+            function resizeFont(){
+                let newScaleValue = parseInt(document.getElementById("font-size-slider").value);
+                let elements = document.querySelector("body").children;
+                for(var i=0; i<elements.length; i++){
+                    for(var x=0; x<elements[i].children.length; x++){
+                        let initial = parseInt(window.getComputedStyle(elements[i].children[x],null).fontSize);
+                        let newSize = initial+((newScaleValue-scaleValue)*2.5);
+                        elements[i].children[x].setAttribute("style","font-size:"+newSize+"px");
+                    }
+                }	
+                scaleValue = newScaleValue;
+            };
+    </script>
 </body>
 </html>
