added thamindu's content

--- a/feedback-form.html
+++ b/feedback-form.html
@@ -13,7 +13,7 @@
 					<a href="../homepage.html">Home</a>
 					<a href="product-order/order.html">Shop</a>
 					<a href="#">Quiz</a>
-					<a href="#">Portfolio</a>
+					<a href="thamindu/portfolio.html">Portfolio</a>
 					<a class="active" href="../feedback-form.html">Feedback</a>
 			</div>
 			<h3>Comments Form</h3>
