--- a/homepage.html
+++ b/homepage.html
@@ -15,7 +15,7 @@
 				<a class="active" href="homepage.html">Home</a>
 				<a href="../product-order/order.html">Shop</a>
 			    <a href="#">Quiz</a>
-			    <a href="#">Portfolio</a>
+			    <a href="thamindu/portfolio.html">Portfolio</a>
 				<a href="feedback-form.html">Feedback</a>
 			</div>
 
