--- a/product-order/order.html
+++ b/product-order/order.html
@@ -19,7 +19,7 @@
             <a href="../homepage.html">Home</a>
             <a class="active" href="#">Shop</a>
             <a href="#">Quiz</a>
-            <a href="#">Portfolio</a>
+            <a href="../thamindu/portfolio.html">Portfolio</a>
             <a href="../feedback-form.html">Feedback</a>
     </div>
     <form action="javascript:" method="post" onsubmit="processOrder();">
