added sitemap link

--- a/homepage.html
+++ b/homepage.html
@@ -24,6 +24,7 @@
 				</iframe>
 			</div>
 
+			<a href="thamindu/sitemap.html" style="float:right;margin-top:20px">Sitemap</a>
 			<footer>
 				<a class="cv" href="cv-pages/w1673620-deshan.html">Dehami Deshan Koswatte 2016198</a>
 				<p>Last modified date (Ex:13th of January 2018)</p>
