linked other pages to quiz

--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
 			<div class="top">
 				<a class="active" href="homepage.html">Home</a>
 				<a href="../product-order/order.html">Shop</a>
-			    <a href="#">Quiz</a>
+			    <a href="quiz/Quiz_page.html">Quiz</a>
 			    <a href="thamindu/portfolio.html">Portfolio</a>
 				<a href="feedback-form.html">Feedback</a>
 			</div>
