--- a/product-order/order.html
+++ b/product-order/order.html
@@ -18,7 +18,7 @@
     <div class="top">
             <a href="../homepage.html">Home</a>
             <a class="active" href="#">Shop</a>
-            <a href="#">Quiz</a>
+            <a href="../quiz/Quiz_page.html">Quiz</a>
             <a href="../thamindu/portfolio.html">Portfolio</a>
             <a href="../feedback-form.html">Feedback</a>
     </div>
