--- a/feedback-form.html
+++ b/feedback-form.html
@@ -12,7 +12,7 @@
 			<div class="top">
 					<a href="../homepage.html">Home</a>
 					<a href="product-order/order.html">Shop</a>
-					<a href="#">Quiz</a>
+					<a href="quiz/Quiz_page.html">Quiz</a>
 					<a href="thamindu/portfolio.html">Portfolio</a>
 					<a class="active" href="../feedback-form.html">Feedback</a>
 			</div>
