added link to my cv in product order form

--- a/product-order/order.html
+++ b/product-order/order.html
@@ -138,7 +138,7 @@
     </div>
 
     <footer>
-        <span>Developed by: Ihan Dilnath - w1673607 - 2016030</span><br>
+        <span><a href="../cv-pages/w1673607-ihan.html">Ihan Dilnath - w1673607 - 2016030</a></span><br>
         <span>SE Tutorial Group B</span>
     </footer>
 
