--- a/cv-pages/w1673607-ihan.html
+++ b/cv-pages/w1673607-ihan.html
@@ -49,7 +49,8 @@
         }
         body{
             background-image: url("wallpaper.jpg");
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
     </style>
 </head>
