added slider icons

--- a/product-order/order.html
+++ b/product-order/order.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto|OpenSans"/>
     <link href="https://fonts.googleapis.com/css?family=Iceland" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="order.css">
 </head>
 <body style="background-color: white;">
-    <div id="font-size-slider-div">
-            <input id="font-size-slider" onchange="resizeFont()" type="range" min="1" max="5" value="3"/>
-    </div>
+        <div id="font-size-slider-div">
+				<i style="color:white; font-size:18px;" class="material-icons">title</i>
+				<input id="font-size-slider" onchange="resizeFont()" type="range" min="1" max="5" value="3"/>
+				<i style="color:white; font-size:30px;" class="material-icons">title</i>
+        </div>
     <div class="top">
             <a href="../homepage.html">Home</a>
             <a class="active" href="#">Shop</a>
