--- a/homepage.html
+++ b/homepage.html
@@ -4,11 +4,14 @@
 			<title>Main Page</title>
 			<link href="https://fonts.googleapis.com/css?family=Iceland" rel="stylesheet">
 			<link rel="stylesheet" type="text/css" href="css/homepage-styles.css">
+			<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		</head>
 		<body>
 
 			<div id="font-size-slider-div">
-					<input id="font-size-slider" onchange="resizeFont()" type="range" min="1" max="5" value="3"/>
+				<i style="color:white; font-size:18px;" class="material-icons">title</i>
+				<input id="font-size-slider" onchange="resizeFont()" type="range" min="1" max="5" value="3"/>
+				<i style="color:white; font-size:30px;" class="material-icons">title</i>
 			</div>
 
 			<div class="top">
