--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,9 @@
 		</head>
 		<body>
 
-			<div id="font-size-slider-div">
+			<img src="resources/graphics/logo.png" style="height:80px;float:left;" alt="">
+
+			<div id="font-size-slider-div" style="float:right;">
 				<i style="color:white; font-size:18px;" class="material-icons">title</i>
 				<input id="font-size-slider" onchange="resizeFont()" type="range" min="1" max="5" value="3"/>
 				<i style="color:white; font-size:30px;" class="material-icons">title</i>
