--- a/product-order/order.html
+++ b/product-order/order.html
@@ -13,11 +13,13 @@
     <link rel="stylesheet" href="order.css">
 </head>
 <body style="background-color: white;">
-        <div id="font-size-slider-div">
-				<i style="color:white; font-size:18px;" class="material-icons">title</i>
-				<input id="font-size-slider" onchange="resizeFont()" type="range" min="1" max="5" value="3"/>
-				<i style="color:white; font-size:30px;" class="material-icons">title</i>
-        </div>
+    <img src="../resources/graphics/logo.png" style="height:80px;float:left;" alt="">
+
+    <div id="font-size-slider-div" style="float:right;">
+        <i style="color:white; font-size:18px;" class="material-icons">title</i>
+        <input id="font-size-slider" onchange="resizeFont()" type="range" min="1" max="5" value="3"/>
+        <i style="color:white; font-size:30px;" class="material-icons">title</i>
+    </div>
     <div class="top">
             <a href="../homepage.html">Home</a>
             <a class="active" href="#">Shop</a>
