--- a/product-order/order.html
+++ b/product-order/order.html
@@ -34,23 +34,23 @@
 
                 <div class="form-element">
                     <label class="form-label" for="text-field-fName">First Name: </label>
-                    <input type="text" id="text-field-fName" name="text-field-fName" size="25" required>
+                    <input onchange="isAllFieldsChosen(); "type="text" id="text-field-fName" name="text-field-fName" size="25" />
                 </div>
 
                 <div class="form-element">
                     <label class="form-label" for="text-field-lName">Last Name:</label>
-                    <input type="text" id="text-field-lName" name="text-field-lName" size="25" required>
+                    <input onchange="isAllFieldsChosen();" type="text" id="text-field-lName" name="text-field-lName" size="25" />
                 </div>
 
                 <div class="form-element">
                     <label class="form-label" for="text-field-address">Address:</label>
                     <!-- <input type="text" id="text-field-address" name="text-field-address" size=""> -->
-                    <textarea name="text-area-address" id="text-area-address" cols="35" rows="5" required></textarea>
+                    <textarea onchange="isAllFieldsChosen();" name="text-area-address" id="text-area-address" cols="35" rows="5" /></textarea>
                 </div>
 
                 <div class="form-element">
                     <label class="form-label" for="text-field-contact">Contact:</label>
-                    <input type="text" id="text-field-contact" name="text-field-contact"
+                    <input onchange="isAllFieldsChosen();" type="text" id="text-field-contact" name="text-field-contact"
                            minlength="7" maxlength="10" required>
                 </div>
 
