fixed broken links

--- a/feedback-form.html
+++ b/feedback-form.html
@@ -10,11 +10,11 @@
 				<input id="font-size-slider" onchange="resizeFont()" type="range" min="1" max="5" value="3"/>
 			</div> 
 			<div class="top">
-					<a href="../homepage.html">Home</a>
+					<a href="homepage.html">Home</a>
 					<a href="product-order/order.html">Shop</a>
 					<a href="quiz/Quiz_page.html">Quiz</a>
 					<a href="thamindu/portfolio.html">Portfolio</a>
-					<a class="active" href="../feedback-form.html">Feedback</a>
+					<a class="active" href="#">Feedback</a>
 			</div>
 			<h3>Comments Form</h3>
 			<form>
