--- a/product-order/order.html
+++ b/product-order/order.html
@@ -143,7 +143,7 @@
                 background-color: greenyellow;
                 border: 1px solid black;
                 border-radius: 8px;
-                float: right;
+                float: left;
                 height: 35px;
                 width: 130px;
                 " type="button" value="Checkout" />
